adjustment sidebar height

--- a/src/components/Sidebar/styles.module.scss
+++ b/src/components/Sidebar/styles.module.scss
@@ -207,14 +207,14 @@
 @media (max-width: 426px) {
   .searchSidebar {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 
     padding: 16px;
   }
 
   .sidebar {
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 
     padding: 16px 0;
   }
